force-app/main/default/objects/Pre_Call_Planner__c/Pre_Call_Planner__c.object-meta.xml
<CustomObject>
    <description>Pre- Call-Planner - to enter my pre-call planner information directly from Account and Opportunity so that I can more efficiently enter the data, store the data right on the account for me or my manager to access easily and print.</description>
    <label>Pre Call Planner</label>
    <nameField>
        <displayFormat>PCP-{0000000000}</displayFormat>
        <label>Pre Call Planner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Call Planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>