force-app/main/default/objects/Pre_Call_Planner__c/fields/Agenda_Items__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Items__c</fullName>
    <inlineHelpText>List of topics, in order of deliver. Be Prepared if your meeting should be cut short unexpectedly.</inlineHelpText>
    <label>Agenda Items</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>