force-app/main/default/objects/Pre_Call_Planner__c/fields/Customer_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commitment__c</fullName>
    <inlineHelpText>To move the opportunity forward - what commitment do you need from the customer?</inlineHelpText>
    <label>Customer Commitment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>