force-app/main/default/objects/Pre_Call_Planner__c/fields/Material_s_Need_and_Prepared__c.field-meta.xml
<CustomField>
    <fullName>Material_s_Need_and_Prepared__c</fullName>
    <inlineHelpText>Prepare materials and documentation. Ensure you are ready and professional.</inlineHelpText>
    <label>Material(s) Need and Prepared</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>