force-app/main/default/objects/Pre_Call_Planner__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <inlineHelpText>Scheduled Meeting Date</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>