force-app/main/default/objects/Pre_Call_Planner__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pre Call Planners</relationshipLabel>
    <relationshipName>Pre_Call_Planner_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>