force-app/main/default/objects/Pre_Call_Planner__c/fields/Overall_Purpose_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Overall_Purpose_of_Meeting__c</fullName>
    <inlineHelpText>Stated and Mutually agreed upon with the Customer.</inlineHelpText>
    <label>Overall Purpose of Meeting</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>