force-app/main/default/objects/Pre_Call_Planner__c/fields/PCP_Account__c.field-meta.xml
<CustomField>
    <fullName>PCP_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pre Call Planners</relationshipLabel>
    <relationshipName>Pre_Call_Planners_Account</relationshipName>
    <type>Lookup</type>
</CustomField>