force-app/main/default/objects/Pre_Call_Planner__c/fields/Questions_Objections_Potential_Responses__c.field-meta.xml
<CustomField>
    <fullName>Questions_Objections_Potential_Responses__c</fullName>
    <inlineHelpText>Think about possible customer objections or questions the customer may have and prepare your response.</inlineHelpText>
    <label>Questions/Objections/Potential Responses</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>