force-app/main/default/objects/Pre_Call_Planner__c/fields/Their_Issues_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Their_Issues_Concerns__c</fullName>
    <inlineHelpText>Are they any outstanding issues or concerns you believe need to be addressed?</inlineHelpText>
    <label>Their Issues/Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>