force-app/main/default/objects/Pre_Call_Planner__c/fields/Their_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Their_Objectives__c</fullName>
    <inlineHelpText>Unstated, what you think they really want to achieve out of the meeting.</inlineHelpText>
    <label>Their Objectives</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>