force-app/main/default/objects/Pre_Call_Planner__c/fields/What_are_my_next_Call_Objectives__c.field-meta.xml
<CustomField>
    <fullName>What_are_my_next_Call_Objectives__c</fullName>
    <inlineHelpText>While still fresh, what should next call objective be.</inlineHelpText>
    <label>What are my next Call Objectives</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>