force-app/main/default/objects/Pre_Call_Planner__c/fields/What_I_could_have_done_differently__c.field-meta.xml
<CustomField>
    <fullName>What_I_could_have_done_differently__c</fullName>
    <inlineHelpText>This will help you identify areas for improvement.</inlineHelpText>
    <label>What I could have done differently</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>