force-app/main/default/objects/Pre_Call_Planner__c/fields/What_was_Successful__c.field-meta.xml
<CustomField>
    <fullName>What_was_Successful__c</fullName>
    <inlineHelpText>This helps reinforce these actions.</inlineHelpText>
    <label>What was Successful</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>