force-app/main/default/objects/Pre_Call_Planner__c/fields/Your_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Your_Objectives__c</fullName>
    <inlineHelpText>Unstated, what you really want to achieve during this meeting.</inlineHelpText>
    <label>Your Objectives</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>