force-app/main/default/objects/Pre_Call_Planner__c/fields/Your_Questions__c.field-meta.xml
<CustomField>
    <fullName>Your_Questions__c</fullName>
    <inlineHelpText>Prepare in advance to include powerful open-ended questions to open up the conversion. Prioritize them if the meeting is cut short.</inlineHelpText>
    <label>Your Questions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>