force-app/main/default/objects/Pre_Call_Planner__c/validationRules/Is_Opportunity_Account_Matched.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Opportunity_Account_Matched</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PCP_Account__c)),
    NOT(ISBLANK(Opportunity__c)),
    PCP_Account__c &lt;&gt;   Opportunity__r.AccountId  
)</errorConditionFormula>
    <errorMessage>Account is not Associated with selected Opportunity.</errorMessage>
</ValidationRule>